@@ -71,6 +71,16 @@ div#navigation table {
 <div class="ulist">
 <ul>
 <li>
+<p>Added <code>async_</code> prefix to all async functions to support default completion token. #238</p>
+<div class="ulist">
+<ul>
+<li>
+<p>Some of async/sync function overload had been conflicted. e.g) acquire_unique_packet_id().</p>
+</li>
+</ul>
+</div>
+</li>
+<li>
 <p>Unified naming rule of types to <code>*_type</code>. #232</p>
 </li>
 <li>
@@ -175,7 +185,7 @@ div#navigation table {
 </div>
 </li>
 <li>
-<p>Refined documents. #220, #222, #232, #233, #234</p>
+<p>Refined documents. #220, #222, #232, #233, #234, #235</p>
 </li>
 <li>
 <p>Refined examples. #214, #220</p>
